# thesis-trainer-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  structs.py  table.py  theme.py  utils.py
.github/workflows/: auto-format-push.yml  auto-format.yml  lint.yml
src/: components.py  exsel_reader.py  main.py  theme.py
src/components/: __init__.py  filter.py  filter_new.py  game.py  menu.py  overlay.py  player.py  team.py  transfer.py
src/db_controls/: __init__.py  db_connection.py  games.py  init_db.py  player.py  structs.py  structure.py  teams.py  transfer.py
src/models/: __init__.py  filter.py  structs.py  table.py
src/old_db_controls/: __init__.py  games.py  init_db.py  player.py  structure.py  teams.py
src/test/: test.py
src/theme/: theme.py
src/utils/: __init__.py  blocks.py  buttons.py  constants.py  list.py  picker.py  player.py  shimmer.py  short_table.py  switchs.py  table.py  text.py  text_fields.py  text_helpers.py
