[project]
name = "thesis-trainer-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet==0.80.5",
    "aiosqlite==0.22.1",
    "flet-datatable2==0.80.5",
    "aioshutil==1.6",
    "sqlalchemy[asyncio]",
    "pandas==3.0.1",
    "openpyxl==3.1.5"
]

[dependency-groups]
dev = [
    "flet-cli==0.80.5",
    "flet-desktop==0.80.5",
    "flet-web==0.80.5"
]

[tool.flet]
org = "com.mycompany"
product = "thesis-trainer-app"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
respect-gitignore = true

exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "*.pyc",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",   
    "W",   
    "F",   
    "I",   
    "B",   
    "C4",  
    "UP",  
    "TID", 
    "PIE", 
    "RUF", 
    "PL",  
    "TRY",
    "SIM", 
]


ignore = [
    "E501", "PLW0603", "F403", "PLW0602", "F401", "RUF001"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"